# tss

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
experiments/mnist/: callbacks.py  config.py  dataloaders.py  main.py  trainer.py
experiments/test/: test.ipynb
tss/: __init__.py  flow_matching.py
tss/nn/: diffusion_transformer.py  mamba.py  nanogpt_s6.py  s4.py  sashimi_s6.py
