[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "tss"
description = "long-range conditional time series generation with autoregressive models"
authors = [{name = "Henry Trinh", email = "trinhhe@ethz.ch"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
]
dynamic = ["version"]

[tool.setuptools]
packages = ["tss"]

[tool.setuptools.dynamic]
version = {attr = "tss.__init__.__version__"}

[tool.rye]
managed = true
dev-dependencies = []

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 80
exclude = ["*_test.py", "docs/**", "examples/**"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607"]
