[build-system]
requires = ["setuptools", "wheel", "torch", "packaging", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "tss"
description = "long-range conditional time series generation with autoregressive models"
authors = [{name = "Henry Trinh", email = "trinhhe@ethz.ch"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "pytorch-lightning>=2.1.3",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.2",
    "seisbench>=0.8.0",
    "h5py>=3.10.0",
    "diffusers>=0.26.3",
    "pathos>=0.3.2",
    "librosa>=0.10.2.post1",
    "pandas>=2.2.2",
    "matplotlib>=3.8.2",
    "jupyterlab>=4.1.1",
    "jupytext>=1.16.1",
    "wandb>=0.16.3",
    "obspy>=1.4.1",
    "seisbench>=0.8.0",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["tss"]

[tool.setuptools.dynamic]
version = {attr = "tss.__init__.__version__"}

[tool.rye]
managed = true
dev-dependencies = []

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 80
exclude = ["*_test.py", "docs/**", "examples/**"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607"]
